welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: not enough arguments for method reprodCouleur: (T: Array[java.awt.Color])Unit.
Unspecified value parameter T.
  reprodCouleur()
               ^